# astro_ml_forecasting

./: Dockerfile  WARP.md  docker-compose.override.yml  main.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: sales_forecast_training.py
include/data_validation/: validators.py
include/feature_engineering/: feature_pipeline.py
include/ml_models/: advanced_ensemble.py  diagnostics.py  ensemble_model.py  model_visualization.py  train_models.py
include/utils/: data_generator.py  mlflow_s3_utils.py  mlflow_utils.py  s3_verification.py  service_discovery.py
ui/: inference_app.py
ui/pages/: inference.py
ui/utils/: ensemble_model_standalone.py  production_model_loader.py  simple_model_loader.py  simple_predictor.py
